2002-03-18  Richard Williamson  <rjw@apple.com>

        Added comments about new layout scheme.  Cleaned up code.
        Improved core measurement routine.

	* src/kwq/KWQFontMetrics.mm: (QFontMetrics::boundingRect):
	* src/kwq/kwqdebug.h:

2002-03-18  Darin Adler  <darin@apple.com>

	* src/kwq/KWQString.mm: (QString::latin1): Handle null case properly.
	We must return "", not 0.

2002-03-18  Darin Adler  <darin@apple.com>

        Redo inlining of QChar and QString and some other small speed improvements.
        Sadly, this doesn't seem to make things measurably faster, but I decided to
        commit my work rather than discarding it; it doesn't make things slower.

	* src/kwq/qt/qstring.h:
	* src/kwq/KWQChar.mm:
	* src/kwq/KWQString.mm:
        Do a lot more inlining. Also, the CFStringRef inside a QString is now never
        nil, so we can get rid of many checks for nil.

	* src/kwq/KWQFontMetrics.mm: (QFontMetrics::width): Use _rectForString() a
        couple more places.

2002-03-18  Richard Williamson  <rjw@apple.com>

        Changed to use non direct _rectForString() function.   Avoids
        unnecessary NSString allocation.
        
	* src/kwq/KWQFontMetrics.mm: (QFontMetrics::boundingRect):

2002-03-18  Darin Adler  <darin@apple.com>

	* src/kwq/KWQFontMetrics.mm: (QFontMetricsPrivate::getInfo),
	(QFontMetrics::width), (QFontMetrics::_width), (QFontMetrics::boundingRect),
	(QFontMetrics::size): Don't make the info object right away, in case the
	metrics object is only used to compute ascent and descent.

2002-03-17  Richard Williamson  <rjw@apple.com>

        Implementation of replacement code for NSLayoutManager.  Huge
        performance gains.
        
	* src/kdelibs/khtml/rendering/render_text.cpp: (RenderText::calcMinMaxWidth),
	(RenderText::width):
	* src/kwq/KWQFontMetrics.mm: (ROUND_TO_INT), (__IFInitATSGlyphVector),
	(__IFResetATSGlyphVector), (__IFFillStyleWithAttributes), (-[KWQLayoutInfo